2008-03-28  Zoltan Varga  <vargaz@gmail.com>

	* reflection.c (calc_section_size): Use add_stream_zero to align the size of
	the streams to fix reading of invalid memory later.

	* metadata.h (MonoType): Use 'MonoTypeEnum' instead of int for the 'type' field
	to ease debugging.

2008-03-26  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (signature_dup): Use mono_metadata_signature_alloc ().
	(cominterop_method_signature): Ditto. Fix the size passed to memcpy.

2008-03-26  Massimiliano Mantione  <massi@ximian.com>
	* threads.h: Added MonoThreadManageCallback type and
	mono_thread_set_manage_callback prototype
	* object-internals.h: In _MonoThread, renamed unused6 to manage_callback
	(used to store the mono_thread_manage callback).
	* threads.c: Added mono_thread_set_manage_callback, and handle
	"MonoThread->manage_callback" in build_wait_tids.

2008-03-26  Dick Porter  <dick@ximian.com>

	* process.c (process_get_fileversion): Set FileVersionInfo strings
	to Empty when the resource doesn't have the particular info.
	Fixes bug 355717.

2008-03-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (mono_method_verify): Proper prefix validation.

2008-03-25  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_InternalInvoke): Return exceptions thrown by the icall
	itself in a separate argument instead of throwing them. Fixes #373448.

	* appdomain.c: Bump corlib version.

2008-03-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c: Implemented readonly prefix and verify controled mutability pointers.

2008-03-20  Kornél Pál  <kornelpal@gmail.com>

	* file-io.c, filewatcher.c, threadpool.c, threads.c: Removed Windows
	version macros.

2008-03-20  Mark Probst  <mark.probst@gmail.com>

	* generic-sharing.c, class-internals.h: Code for putting
	reflection types into the runtime generic context.

2008-03-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c (ves_icall_get_method_info): Return correct values for the call convention.
	Fixes #340662. 

