@@ -1,3 +1,9 @@
+2008-03-28  Dick Porter  <dick@ximian.com>
+
+	* process.c (process_get_fileversion): Use the first language ID
+	we see, rather than insisting on an invariant language.  Fixes bug
+	374600.
+
 2008-03-28  Zoltan Varga  <vargaz@gmail.com>
 
 	* reflection.c (calc_section_size): Use add_stream_zero to align the size of
